// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  salt      String?
  posts     Post[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Post {
  id          Int           @id @default(autoincrement())
  title       String
  content     String
  author      User          @relation(fields: [authorId], references: [id])
  authorId    Int
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
}

model AuditLog {
  id         Int      @id @default(autoincrement())
  tableName  String
  operation  String
  oldValues  String?
  newValues  String?
  timestamp  DateTime @default(now())
  userId     Int?
}

model Logger {
  id         Int      @id @default(autoincrement())
  message    String
  errorStack String
  timestamp  DateTime @default(now())
}