@startuml

entity User {
  *id : Int
  --
  email : String
  password : String
  salt : String?
  createdAt : DateTime
  updatedAt : DateTime
}

entity Post {
  *id : Int
  --
  title : String
  content : String
  authorId : Int
  createdAt : DateTime
  updatedAt : DateTime
}

entity AuditLog {
  *id : Int
  --
  tableName : String
  operation : String
  oldValues : String
  newValues : String
  timestamp : DateTime
  userId : Int
}

entity Logger {
  *id : Int
  --
  message : String
  errorStack : String
  timestamp : DateTime
}

User ||--o{ Post : "posts"
AuditLog ||--o{ User : "user"
@enduml